# ai-agent

./: .gitignore  AGENTS.md  AI_AGENT_ARCHITECTURE.md  DEVELOPMENT_PLAN.md  NEXT_DEVELOPMENT.md  PROJECT.md  README.md  conversation_history.txt  pyproject.toml
configs/: default.yaml
docs/: README.md  architecture.md  codebase-guide.md  development-plan.md  next-development.md  optimization-suggestions.md  project-status.md
src/agent_system/agents/: __init__.py  planner.py  reasoner.py  reflector.py
src/agent_system/api/: cli.py
src/agent_system/config/: __init__.py  loader.py  models.py
src/agent_system/context/: __init__.py  assembler.py  budget.py
src/agent_system/execution/: __init__.py  executor.py
src/agent_system/llm/: __init__.py  client.py
src/agent_system/models/: __init__.py  events.py  execution.py  planning.py  request.py  runtime.py  tools.py
src/agent_system/observability/: __init__.py  logging.py
src/agent_system/prompts/: __init__.py  registry.py
src/agent_system/runtime/: __init__.py  checkpoint.py  factory.py  loop.py  session.py
src/agent_system/skills/: __init__.py  base.py  registry.py  schemas.py
src/agent_system/tools/: __init__.py  base.py  normalization.py  registry.py  router.py  schemas.py
tests/: test_import.py
tests/integration/: test_minimax_local.py  test_minimax_runtime.py
tests/unit/: test_executor_dependencies.py  test_reasoner_step_results.py  test_reflector_execution_status.py  test_runtime_records_step_results.py  test_tool_names.py
tests/unit/agents/: test_planner_agent.py  test_reasoner_agent.py
(+21 files in other folders)
